# ten

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SDLMain.m  main.cpp
Data/Sturdy/materials/: White.mat
Data/Ten/: Credits.txt  Whale.vec
Games/Sturdy/: ST_Game.cpp  ST_Game.h  ST_Scenes.h
Games/Ten/: TEN_Camera.cpp  TEN_Camera.h  TEN_Fader.cpp  TEN_Fader.h  TEN_Game.cpp  TEN_Game.h  TEN_Scenes.h  TEN_Starfield.cpp  TEN_Starfield.h  TEN_Whale.cpp  TEN_Whale.h
Games/Ten/Modes/: TEN_ModeCredits.cpp  TEN_ModeCredits.h  TEN_ModeInGame.cpp  TEN_ModeInGame.h  TEN_ModeTitle.cpp  TEN_ModeTitle.h
